# clean_crush

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml
docs/: CNAME  index.html  index.md
src/: archive.rs  cli.rs  config.rs  exam.rs  gamification.rs  lib.rs  main.rs  scanner.rs
